# bytelockos

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI-CD-SETUP.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SCAFFOLDING_COMPLETE.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml
ai-engine/: __init__.py  config.py  correlation.py  kafka_bus.py  main.py  multi_agent.py
docs/: API.md  ARCHITECTURE.md  TESTING.md
infrastructure/docker/: Dockerfile.ai-engine  Dockerfile.dashboard-backend  docker-compose.yml
infrastructure/kubernetes/: deployment.yaml
integrations/ocsf-parsers/: Cargo.toml
integrations/ocsf-parsers/src/: main.rs
integrations/syslog-receiver/: Cargo.toml
integrations/syslog-receiver/src/: main.rs
scripts/: setup.sh
tests/: test_basic.py
ui-dashboard/backend/: main.py
ui-dashboard/frontend/: .eslintrc.json  Dockerfile  package.json
ui-dashboard/frontend/public/: index.html
ui-dashboard/frontend/src/: App.js
