[package]
name = "ocsf-parsers"
version = "0.1.0"
edition = "2021"
authors = ["ByteLock Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
anyhow = "1.0"

[[bin]]
name = "ocsf-parsers"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
